--- a/formulario.html
+++ b/formulario.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/css/bootstrap-datepicker.min.css" type="text/css" media="screen" />
         
-    <link rel="stylesheet" href="https://www.dottransfers.com/presu3/js/jquery.timepicker.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="https://www.dottransfers.com/presu3/js/jquery.timepicker.min.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="css/jquery.timepicker.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="css/jquery.timepicker.min.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
     
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
