--- a/formulario.html
+++ b/formulario.html
@@ -23,7 +23,7 @@
     <div class="container presuciudad">
 
         <!-- 2 PESTAÑAS (PRESUPUESTAR Y ACUERDOS COMERCIALES) -->
-        <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2" style="padding: 0px;">
+        <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 sinpad">
             <div class="col-xs-6 presuder">
             PRESUPUESTAR
             </div>
