Actualizando codigo HTML

--- a/formulario.html
+++ b/formulario.html
@@ -8,8 +8,8 @@
    <link rel="stylesheet" href="css/bootstrap-theme.css" type="text/css" media="screen" />
    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="screen" />
     
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/css/bootstrap-datepicker.min.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="css/jquery-ui.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="css/bootstrap-datepicker.min.css" type="text/css" media="screen" />
         
     <link rel="stylesheet" href="css/jquery.timepicker.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="css/jquery.timepicker.min.css" type="text/css" media="screen" />
