acentos en html y div de error

--- a/formulario.html
+++ b/formulario.html
@@ -38,7 +38,7 @@
         <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 conteneazul">
             <form class="demo-form-2" id="jpform" method="post" action="#">
 
-
+                <div class="col-md-12 errorpresupuestar"></div>
                 <!-- PRIMERA INSTANCIA DEL FORMULARIO -->
                 <div class="form-section-2">
                     <div class="col-xs-12 col-sm-12 col-md-12">
@@ -53,7 +53,7 @@
                              <span class="input--hoshi">
                                 <input class="input__field input__field--hoshi" type="text" id="origen" name="origen" required placeholder=""/>
                                 <label class="input__label input__label--hoshi input__label--hoshi-color-1" for="origen">
-                                  <span class="input__label-content input__label-content--hoshi">¿Desde dónde?</span>
+                                  <span class="input__label-content input__label-content--hoshi">¿Desde d&#243;nde?</span>
                                  </label>
                               </span>
                         </div>
@@ -61,7 +61,7 @@
                         <div class="col-xs-12 col-sm-6 col-md-6">
                            <div class="col-md-12 selehor">
                                   <select class="dura vehicleQty selip" id="horas" name="destino">
-                                        <option selected disabled value="0">Duración</option>
+                                        <option selected disabled value="0">Duraci&#243;n</option>
                                         <option value="1">1 Hora</option>
                                         <option value="2">2 Horas</option>
                                         <option value="3">3 Horas</option>
@@ -90,7 +90,7 @@
                              <span class="input--hoshi seledes">
                                   <input class="input__field input__field--hoshi" type="text" id="destino" name="destino" required placeholder=""/>
                                   <label class="input__label input__label--hoshi input__label--hoshi-color-1" for="destino">
-                                  <span class="input__label-content input__label-content--hoshi">¿A dónde?</span>
+                                  <span class="input__label-content input__label-content--hoshi">¿A d&#243;nde?</span>
                                   </label>
                               </span>
                         </div>
@@ -504,7 +504,7 @@
                     <div class="col-md-12">
                          <div class="col-md-3">
                               <span class="input--hoshi">
-                                  <input class="input__field input__field--hoshi" type="text" id="nombre" name="nombre" required/>
+                                  <input class="input__field input__field--hoshi" type="text" id="nombre" name="nombre" maxlength="20" required/>
                                   <label class="input__label input__label--hoshi input__label--hoshi-color-1" for="nombre">
                                     <span class="input__label-content input__label-content--hoshi">Nombre</span>
                                   </label>
@@ -513,7 +513,7 @@
 
                             <div class="col-md-3">
                               <span class="input--hoshi">
-                                  <input class="input__field input__field--hoshi" type="text" id="apellido" name="apellido" required/>
+                                  <input class="input__field input__field--hoshi" type="text" id="apellido" name="apellido" maxlength="20" required/>
                                   <label class="input__label input__label--hoshi input__label--hoshi-color-1" id="apellido" name="apellido">
                                       <span class="input__label-content input__label-content--hoshi">Apellido</span>
                                   </label>
@@ -524,7 +524,7 @@
                               <span class="input--hoshi">
                                   <input class="input__field input__field--hoshi" type="email" id="email" name="email" required/>
                                   <label class="input__label input__label--hoshi input__label--hoshi-color-1" for="email">
-                                    <span class="input__label-content input__label-content--hoshi">Dirección de E-mail</span>
+                                    <span class="input__label-content input__label-content--hoshi">Direcci&#243;n de E-mail</span>
                                   </label>
                               </span>
                            </div>
@@ -551,7 +551,7 @@
 
                      <div class="col-md-12 selecanti" id="qwe">
                         <input type="radio" id="test" name="viajespormes" value="Unica vez">
-                            <label for="test">Contratación por<br>única vez</label>
+                            <label for="test">Contrataci&#243;n por<br>&#250;nica vez</label>
                         <input type="radio" id="test1" name="viajespormes" value="1 a 5 por mes">
                             <label for="test1">1 a 5 viajes<br>por mes</label>
                         <input type="radio" id="test2" name="viajespormes" value="6 a 30 por mes">
@@ -590,7 +590,7 @@
 
                     <div class="col-md-12 derforu">
                     <button type="button" class="previous btnu"><</button>
-                    <button type="submit" class="btn confi envi">CONOCÉ LOS BENEFICIOS  <span class="glyphicon glyphicon-send"></span></button>
+                    <button type="submit" class="btn confi envi">CONOCE LOS BENEFICIOS  <span class="glyphicon glyphicon-send"></span></button>
                     </div>
                 </div>
             <!-- FIN DE LA CUARTA INSTANCIA DEL FORMULARIO -->
