--- a/formulario.html
+++ b/formulario.html
@@ -617,8 +617,8 @@
      <script src="js/conect.js" type="text/javascript"></script>
      <script src="js/jquery.geocomplete.js" type="text/javascript"></script>
         
-     <script src="js/jquery.timepicker.js" type="text/javascript"></script>
      <script src="js/jquery.timepicker.min.js" type="text/javascript"></script>
+     <script src="js/jquery.datetimepicker.js" type="text/javascript"></script>
     
      <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/js/bootstrap-datepicker.min.js" type="text/javascript"></script>
 
