--- a/formulario.html
+++ b/formulario.html
@@ -629,6 +629,7 @@
     <script src="js/jquery.datetimepicker.js" type="text/javascript"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/js/bootstrap-datepicker.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/locales/bootstrap-datepicker.es.min.js" type="text/javascript" charset="UTF-8"></script>
 
     <script src="js/formu-nuevo-form.js" type="text/javascript"></script>
     <script src="js/presupuestar.js" type="text/javascript"></script>
