--- a/formulario.html
+++ b/formulario.html
@@ -55,7 +55,7 @@
                     <div class="col-xs-12 separadorformu">
                         <div class="col-xs-12 col-sm-6 col-md-6">
                             <span class="input--hoshi">
-                                <input class="input__field input__field--hoshi" type="text" id="origen" name="origen" required placeholder=""/>
+                                <input class="input__field input__field--hoshi" type="text" id="origen" name="origen" required placeholder="" />
                                 <label class="input__label input__label--hoshi input__label--hoshi-color-1" for="origen">
                                   <span class="input__label-content input__label-content--hoshi">¿Desde d&#243;nde?</span>
                             </label>
@@ -64,7 +64,7 @@
 
                         <div class="col-xs-12 col-sm-6 col-md-6">
                             <div class="col-md-12 selehor">
-                                  <select class="dura vehicleQty selip" id="horas" name="destino" data-parsley-destinohora="">
+                                  <select class="dura vehicleQty selip" id="horas" name="horas" data-parsley-validate-if-empty data-parsley-destinohora="">
                                         <option selected disabled value="0">Duraci&#243;n</option>
                                         <option value="1">1 Hora</option>
                                         <option value="2">2 Horas</option>
@@ -92,7 +92,7 @@
                                     </select>
                             </div>
                             <span class="input--hoshi seledes">
-                                  <input class="input__field input__field--hoshi" type="text" id="destino" name="destino" placeholder="" data-parsley-destinohora=""/>
+                                  <input class="input__field input__field--hoshi" type="text" id="destino" name="destino" placeholder="" data-parsley-validate-if-empty data-parsley-destinohora="" />
                                   <label class="input__label input__label--hoshi input__label--hoshi-color-1" for="destino">
                                   <span class="input__label-content input__label-content--hoshi">¿A d&#243;nde?</span>
                             </label>
@@ -106,10 +106,10 @@
                         </div>
 
                         <div class="col-xs-12 col-sm-3 col-md-3 ocheinpu hormed">
-                            <input id="hora" type="text" name="hora" class="ui-timepicker-input" autocomplete="off" placeholder="Hora:" required />
+                            <input id="hora" type="text" name="hora" class="ui-timepicker-input" autocomplete="off" placeholder="Hora:" />
                         </div>
 
-                        <div class="col-xs-12 col-sm-6 col-md-6 ocheinpuuno tipmed">
+                        <div class="col-xs-12 col-sm-6 col-md-6 ocheinpuuno tipmed" >
                             <select id="selectChange" class="selip" required>
                                 <option selected="" disabled="">Tipo y Cantidad de Vehiculo</option>
                                 <option value="option1">3-5 PAX (Autos, SUVs, MiniVans)</option>
@@ -118,10 +118,10 @@
                                 <option value="option4">LIMUSINAS (6-10 PAX)</option>
                              </select>
                         </div>
-
+                        
                         <!-- GALERIA DE VEHICULOS -->
                         <div class="autisdi col-xs-12 col-sm-12 col-md-12">
-
+                            <span id="servicioError" class="parsley-destinohora"></span>
                             <!-- AUTOS, SUVS Y MINIVANS -->
                             <div class="formrow">
                                 <div id="option1" style="display:none;">
@@ -132,7 +132,7 @@
                                         <div class="car-details">
                                             <p class="serv-name">Sedan Estandar</p>
                                             <p class="description"><span class="passQty">3</span> <img src="https://www.dottransfers.com/presu3/img/pax-icon.jpg" alt=""> | <span class="baggQty">2</span> <img src="https://www.dottransfers.com/presu3/img/luggage-icon.jpg" alt=""></p>
-                                            <input class="radi" type="checkbox" id="standard" value="Standard Sedan (3 PAX - 2 Baggage)" name="servicio[]" required="" data-parsley-mincheck="1">
+                                            <input class="radi" type="checkbox" id="standard" value="Standard Sedan (3 PAX - 2 Baggage)" name="servicio[]" required="" data-parsley-mincheck="1" data-parsley-errors-container="#servicioError">
                                             <select class="vehicleQty" name="cant-std">
                                                 <option selected="">Cantidad de Vehiculos</option>
                                                 <option value="1">1 Vehiculo</option>
@@ -624,6 +624,8 @@
 
     <script src="js/jquery.timepicker.min.js" type="text/javascript"></script>
     <script src="js/jquery.datetimepicker.js" type="text/javascript"></script>
+
+    <script src="js/moment.js" type="text/javascript"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/js/bootstrap-datepicker.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/locales/bootstrap-datepicker.es.min.js" type="text/javascript" charset="UTF-8"></script>
