API post on next step + send clientType & comments

--- a/formulario.html
+++ b/formulario.html
@@ -563,13 +563,13 @@
                     </p>
                     
                      <div class="col-md-12 selecanti">
-                        <input type="radio" id="test4" name="acuerdocomercial" value="Particular" required>
+                        <input type="radio" id="test4" name="acuerdocomercial" value="others" required>
                         <label for="test4">Particular</label>
-                        <input type="radio" id="test5" name="acuerdocomercial" value="Corporativo">
+                        <input type="radio" id="test5" name="acuerdocomercial" value="corporate">
                         <label for="test5">Corporativo</label>
-                        <input type="radio" id="test6" name="acuerdocomercial" value="Agencia de Viajes">
+                        <input type="radio" id="test6" name="acuerdocomercial" value="agency">
                         <label for="test6">Agencia de Viajes</label>
-                        <input type="radio" id="test7" name="acuerdocomercial" value="Otros">
+                        <input type="radio" id="test7" name="acuerdocomercial" value="others">
                         <label for="test7">Otro</label>
                     </div>
                     
@@ -578,13 +578,13 @@
                     </p>
 
                     <div class="col-md-12 selecanti" id="qwe">
-                        <input type="radio" id="test" name="viajespormes" value="Unica vez" required>
+                        <input type="radio" id="test" name="viajespormes" value="[CT:1]" required>
                         <label for="test">Contrataci&#243;n por<br>&#250;nica vez</label>
-                        <input type="radio" id="test1" name="viajespormes" value="1 a 5 por mes">
+                        <input type="radio" id="test1" name="viajespormes" value="[CT:2]">
                         <label for="test1">1 a 5 viajes<br>por mes</label>
-                        <input type="radio" id="test2" name="viajespormes" value="6 a 30 por mes">
+                        <input type="radio" id="test2" name="viajespormes" value="[CT:3]">
                         <label for="test2">6 a 30 viajes<br>por mes</label>
-                        <input type="radio" id="test3" name="viajespormes" value="Mas de 30 por mes">
+                        <input type="radio" id="test3" name="viajespormes" value="[CT:4]">
                         <label for="test3">Más de 30 viajes<br>por mes</label>
                     </div>
 
