--- a/formulario.html
+++ b/formulario.html
@@ -620,6 +620,8 @@
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js" type="text/javascript"></script>
 
     <script src="js/parsley.js" type="text/javascript"></script>
+    <script src="js/parsley.es.js" type="text/javascript"></script>
+
     <script src="js/jquery.geocomplete.js" type="text/javascript"></script>
 
     <script src="js/jquery.timepicker.min.js" type="text/javascript"></script>
